ha20 finished + corrections

--- a/hausaufgabe20.Rmd
+++ b/hausaufgabe20.Rmd
@@ -26,8 +26,10 @@ suppressPackageStartupMessages(library(knitcitations))
 
 Ich schlage weiterhin vor, dass Sie die R-Code-Blöcke erst in der Konsole testen und zum Laufen bringen, bevor Sie sie in die Rmd-Datei einfügen. Die Behebung von Fehlern ist einfach leichter in der Konsole *und* bei den Rmd-Dateien wird evtl. alles jedes mal neu berechnet, was bei den Modellen hier evtl. ein paar Minuten dauern könnte. Sparen Sie sich Zeit und testen Sie das Knitten der Rmd-Datei erst, wenn Sie kurz eine Kaffeepause brauchen
 
-# Höfflichkeit und Stimmhöhe
-`r citet("10.1016/j.wocn.2012.08.006")` untersuchten die phonetischen Eigenschaften der formellen und informellen Register im Koreanisch. Unter anderem wurde auch die Grundfrequenz ($F_0$) der Stimme bei jedem Trial festgestellt. Die Daten zur Grundfrequenz bei sechs Probanden und sieben Items hat Bodo Winter im Netz verfügbar gemacht. 
+Im folgenden steht RE für engl. *random effect* und FE für engl. *fixed effect*.
+
+# Höflichkeit und Stimmhöhe
+`r citet("10.1016/j.wocn.2012.08.006")` untersuchten die phonetischen Eigenschaften der formellen und informellen Register im Koreanischen. Unter anderem wurde auch die Grundfrequenz ($F_0$) der Stimme bei jedem Trial festgestellt. Die Daten zur Grundfrequenz bei sechs Probanden und sieben Items hat Bodo Winter im Netz verfügbar gemacht. 
 
 Wir können Daten direkt von seiner Webseite in R laden: 
 
@@ -41,7 +43,7 @@ Wie immer schauen wir uns erstmal die Zusammenfassung der Daten an.
 summary(stimmen)
 ```
 
-Die Items in dieser Studie sind "Szenarien", also Situationen wo man mehr oder weniger höfflich ist: obwohl es einen fixen Faktor für Höfflichkeit gibt, ist man evtl. nicht in jeder Situation gleich (un)höfflich. Somit haben einen zufälligen Faktor, weil wir nicht alle möglichen Szenarien austesten können, obgleich wir erkennen, dass das Szenario einen Teil der Varianz erklären kann. `attitude` ist auch ein Faktor mit zwei Stufen `inf` für *informal* und `pol` für *polite*.  Geschlecht spielt eine bekannte Rolle bei Stimmhöhe und wurde demzufolge auch als `gender` mit aufgenommen. Die Messung der Stimmhöhe in Hertz ist eine metrische Variable, die als `frequency` im data frame zu finden ist. 
+Die Items in dieser Studie sind "Szenarien", also Situationen wo man mehr oder weniger höflich ist: obwohl es einen fixen Faktor für Höflichkeit gibt, ist man evtl. nicht in jeder Situation gleich (un)höflich. Somit haben wir einen zufälligen Faktor, weil wir nicht alle möglichen Szenarien austesten können, obgleich wir erkennen, dass das Szenario einen Teil der Varianz erklären kann. `attitude` ist auch ein Faktor mit zwei Stufen `inf` für *informal* und `pol` für *polite*.  Geschlecht spielt eine bekannte Rolle bei Stimmhöhe und wurde demzufolge auch als `gender` mit aufgenommen. Die Messung der Stimmhöhe in Hertz ist eine metrische Variable, die als `frequency` im data frame zu finden ist. 
 
 Allerdings merken wir, dass `scenario` falsch kodiert ist, was wir korrigieren müssen:
 
@@ -59,16 +61,16 @@ ggplot(stimmen) +
 
 Wir merken dabei, dass:
 1. Männer haben eindeutig tiefere Stimmen, was uns schon davor bekannt war.
-2. Der höffliche Register scheint allgemein tiefer zu sein.
+2. Der höfliche Register scheint allgemein tiefer zu sein.
 3. Dieser Unterschied scheint kleiner bei Männern als bei Frauen zu sein.
 
-Über den bekannten Haupteffekt `gender` hinsaus gibt es also zwei weitere fixe Effekte, die wir uns anschauen möchten:
+Über den bekannten Haupteffekt `gender` hinaus gibt es also zwei weitere fixe Effekte, die wir uns anschauen möchten:
 1. Haupteffekt für `attitude`
 2. Interaktion für `gender` $\times$ `attitude` 
 
 ## Item- und Subject-Varianz
 
-Wir können auf ähnliche Art und Weise ein Plot für die Versuchspersonen und Scenzarien erstellen.
+Wir können auf ähnliche Art und Weise ein Plot für die Versuchspersonen und Szenarien erstellen.
 
 Erstellen Sie einen Boxplot für `frequency` nach `subject`, wie oben für `frequency` nach `attitude` gemacht wurde (hier ohne Aufteilung nach Geschlecht). Dieser gibt uns einen Blick in die Varianz innerhalb und zwischen Versuchspersonen. 
 
@@ -80,7 +82,7 @@ CODE_BLOCK_HIER
 
 Gibt es mehr Varianz zwischen Szenarien oder zwischen Versuchspersonen? 
 
-Die Varianz zwischen Versuchspersonen bzw. Szenarien fangen wir durch zufällige Effekte. Es gibt offentsichlich einen Unterschied zwischen den verschiedenen Basisfrequenzen der Einzelversuchenpersonen und es scheint auch zwichen den verschiedenen Szenarien einen Unterschied zu geben, d.h. wir haben auf jeden Fall Intercepts in unserer RE-Struktur. Ob wir auch weitere Struktur in der RE-Struktur, schauen wir uns erst später an.
+Die Varianz zwischen Versuchspersonen bzw. Szenarien beschreiben wir durch zufällige Effekte. Es gibt offentsichlich einen Unterschied zwischen den verschiedenen Basisfrequenzen der Einzelversuchenpersonen und es scheint auch zwischen den verschiedenen Szenarien einen Unterschied zu geben, d.h. wir haben auf jeden Fall Intercepts in unserer RE-Struktur. Ob wir auch weitere Struktur in der RE-Struktur aufnehmen, schauen wir uns erst später an.
 
 # Fixe Effekte
 
@@ -89,14 +91,14 @@ Wie oben erwähnt, haben wir drei mögliche Effekte, die wir uns anschauen wolle
 2. Haupteffekt für `attitude`
 3. Interaktion für `gender` $\times$ `attitude` 
 
-Um die Berechnung im folgenden zu beschleunigen, bleiben wir momentan bei einer Intercepts-Only-RE-Struktur. Weil der Effekt von Geschlecht schon aus der Literatur und dem Alltag bekannt ist, nehmen wir das Model nur mit `gender` als Ausgangspunkt. Wir haben es auch vor, Modellvergleiche zu machen, daher setzten wir `REML=FALSE` von Anfang an.
+Um die Berechnung im folgenden zu beschleunigen, bleiben wir momentan bei einer Intercepts-Only-RE-Struktur. Weil der Effekt von Geschlecht schon aus der Literatur und dem Alltag bekannt ist, nehmen wir das Model nur mit `gender` als Ausgangspunkt. Wir haben auch vor, Modellvergleiche zu machen, daher setzten wir `REML=FALSE` von Anfang an.
 
 ```{r}
 model.gender <- lmer(frequency ~ gender + (1|subject) + (1|scenario), data=stimmen, REML=FALSE)
 summary(model.gender)
 ```
 
-Wie bei normaler Regression werden auch hier kategorische Variablen als Stufen eingegeben. Hier gibt es für `genderM` (also für Männer) eine Auswirkung von etwa $-108$ Hz, d.h. die Stimme von Männern sind etwa $100$ Hz tiefer als die von Frauen.
+Wie bei normaler Regression werden auch hier kategorische Variablen als Stufen angegeben. Hier gibt es für `genderM` (also für Männer) eine Auswirkung von etwa $-108$ Hz, d.h. die Stimme von Männern sind etwa $108$ Hz tiefer als die von Frauen.
 
 Wir schauen als nächstes den Haupteffekt von `attitude` an:
 ```{r}
@@ -125,7 +127,7 @@ Hat die Interkation das Modell verbessert? Wenn ein komplexeres Modell nicht sig
 
 # Zufällige Effekte
 
-Wir haben bisher Modelle mit nur Intercepts in der RE-Struktur angeschaut. Wie `r citet("10.3389/fpsyg.2013.00328")` betont hat, sollten wir möglich maximale RE-Strukturen nehmen, sonst haben wir anti-konservative Schätzungen, also erhöhten $\alpha$-Fehler. Hier könnten wir uns vorstellen, dass sich die Probanden nicht nur in ihrer Basistonlage (Interept) unterscheiden, sondern auch in der Änderung der Tonlage nach Höfflichkeit (Slope/Anstieg). Auf ähnlicher Weise können wir uns auch vorstellen, dass manche Szenarien einen größeren Unterschied in der Tonlage zwischen der informellen und der formellen Varianten als bei anderen. Es lohnt sich also, auch Antieg in die RE-Struktur aufzunehmen.
+Wir haben bisher Modelle angeschaut, die nur Intercepts in der RE-Struktur haben. Wie `r citet("10.3389/fpsyg.2013.00328")` betont hat, sollten wir möglichst maximale RE-Strukturen nehmen, sonst haben wir anti-konservative Schätzungen, also erhöhten $\alpha$-Fehler. Hier könnten wir uns vorstellen, dass sich die Probanden nicht nur in ihrer Basistonlage (Intercept) unterscheiden, sondern auch in der Änderung der Tonlage nach Höflichkeit (Slope/Anstieg). Ähnlich können wir uns auch vorstellen, dass manche Szenarien einen größeren Unterschied in der Tonlage zwischen der informellen und der formellen Varianten als bei anderen hervorrufen. Es lohnt sich also, auch Antieg in die RE-Struktur aufzunehmen.
 
 ```{r}
 model.attitude.re.slope <- lmer(frequency ~ gender + attitude + (1+attitude|subject) + (1+attitude|scenario), data=stimmen, REML=FALSE)
@@ -140,7 +142,7 @@ CODE_BLOCK_HIER
 
 Könnten wir hier ein Intercepts-Only-Modell begründen? 
 
-Wir könnten -- sollten -- uns hier auch das Modell mit `gender` in der RE-Struktur anschauen, aber solche Berechnungen werden sehr schnell für eine Hausaufgabe zu aufwendig. Sie können sich an dieser Stelle schon vorstellen, wie kompliziert die RE-Strukturwerden kann. Wir müssten für jeden zufälligen Effekt die maximale berechnbare Struktur finden und die einzelnen Berechnungen können schon ziemlich lange dauern. Das ist ein deutlicher Nachteil dieser Methode.   
+Wir könnten -- sollten -- uns hier auch das Modell mit `gender` in der RE-Struktur anschauen, aber solche Berechnungen werden sehr schnell für eine Hausaufgabe zu aufwendig. Sie können sich an dieser Stelle schon vorstellen, wie kompliziert die RE-Struktur werden kann. Wir müssten für jeden zufälligen Effekt die maximale berechenbare Struktur finden und die einzelnen Berechnungen können schon ziemlich lange dauern. Das ist ein deutlicher Nachteil dieser Methode.   
 
 (Übrigens: Auch bei den RE-Struktur müssen wir berücksichtigen, ob die Interkation zu einer signifikanten Verbesserung führt. In der Regel nehmen wir allerdings keine RE-Struktur an, die komplexer als unsere FE-Struktur ist. Das heißt, wir schauen nicht, ob die Interaktion in der RE-Struktur was bringt, wenn wir die Interkation nicht in die fixen Effekte aufgenommen haben. )
 
@@ -174,7 +176,7 @@ Wir schauen uns zuerst ein Intercept-Only-Modell an:
 coef(model.attitude)
 ```
 
-Wir sehen, dass das Intercept für jedes `subject` und `scenario` ist, aber die Koeffizienten für die Anstige (`genderM` und `attitudepol`) überall gleich sind und zwar die gleichen, die es alsfixe Effekte gibt!  Bei dem Modell mit Anstieg in der RE-Struktur gibt es einen Anstieg für jedes `subject` und `scenario`.
+Wir sehen, dass das Intercept für jedes `subject` und `scenario` ist, aber die Koeffizienten für die Anstige (`genderM` und `attitudepol`) überall gleich sind und zwar die gleichen, die es als fixe Effekte gibt!  Bei dem Modell mit Anstieg in der RE-Struktur gibt es einen Anstieg für jedes `subject` und `scenario`.
 
 ```{r}
 coef(model.attitude.re.slope)
